; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/drivers/lwip/src/extr_rostcp.c_WaitForEventSafely.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/drivers/lwip/src/extr_rostcp.c_WaitForEventSafely.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TerminationEvent = common dso_local global i32 0, align 4
@WaitAny = common dso_local global i32 0, align 4
@Executive = common dso_local global i32 0, align 4
@KernelMode = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@STATUS_WAIT_0 = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @WaitForEventSafely to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @WaitForEventSafely(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca [2 x i32*], align 16
  store i32* %0, i32** %3, align 8
  %5 = getelementptr inbounds [2 x i32*], [2 x i32*]* %4, i64 0, i64 0
  %6 = load i32*, i32** %3, align 8
  store i32* %6, i32** %5, align 8
  %7 = getelementptr inbounds i32*, i32** %5, i64 1
  store i32* @TerminationEvent, i32** %7, align 8
  %8 = getelementptr inbounds [2 x i32*], [2 x i32*]* %4, i64 0, i64 0
  %9 = load i32, i32* @WaitAny, align 4
  %10 = load i32, i32* @Executive, align 4
  %11 = load i32, i32* @KernelMode, align 4
  %12 = load i32, i32* @FALSE, align 4
  %13 = call i64 @KeWaitForMultipleObjects(i32 2, i32** %8, i32 %9, i32 %10, i32 %11, i32 %12, i32* null, i32* null)
  %14 = load i64, i64* @STATUS_WAIT_0, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %1
  %17 = load i32, i32* @TRUE, align 4
  store i32 %17, i32* %2, align 4
  br label %20

18:                                               ; preds = %1
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %18, %16
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i64 @KeWaitForMultipleObjects(i32, i32**, i32, i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
